--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.1",
     "@splidejs/react-splide": "^0.7.10",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
